# SceneMill

./: .gitignore  .gitmodules  README.md  mkdocs.yml  pyproject.toml  scenemill
.github/workflows/: docs.yml  test.yml
configs/: default.yaml
configs/presets/: images_auto_isaac.yaml  images_colmap_3dgut_isaac.yaml  images_da3_3dgut_isaac.yaml  images_vggt_3dgut_isaac.yaml  rosbag_da3_3dgut_isaac.yaml
docs/: index.md
docs/en/: backend-selection.md  cli.md  concepts.md  development.md  image2sim-integration.md  index.md  installation.md  isaac-validation.md  manifest.md  presets.md  quickstart.md  rosbag.md  troubleshooting.md
docs/en/workflows/: anysplat-low-view.md  da3-3dgut-isaac.md
docs/zh/: backend-selection.md  cli.md  concepts.md  development.md  image2sim-integration.md  index.md  installation.md  isaac-validation.md  manifest.md  presets.md  quickstart.md  rosbag.md  troubleshooting.md
docs/zh/workflows/: anysplat-low-view.md  da3-3dgut-isaac.md
scripts/: apply_third_party_patches.sh  clean_workspace.sh  create_env.sh  doctor.sh  install_local.sh  run_anysplat.py  run_example_da3_3dgut.sh  test_e2e.sh
src/scenemill/: __init__.py  cli.py  config.py  logging.py  pipeline.py  registry.py
src/scenemill/adapters/: anysplat.py  colmap.py  da3.py  isaac_usd.py  rosbag.py  threedgrut.py  vggt.py
src/scenemill/runtime/: __init__.py  conda.py  gpu.py  oom_retry.py  subprocess.py
src/scenemill/schemas/: __init__.py  artifacts.py  manifest.py
src/scenemill/stages/: export.py  (+7 more)
tests/: test_core.py
workflows/: da3_3dgut_isaac.md  vggt_3dgut_isaac.md
